--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -1,4 +1,9 @@
-/* stylelint-disable */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html, body, #root {
+    height: 100%;
+    width: 100%;
+}
+
